--- a/PrincessNightmare/Timer.xib
+++ b/PrincessNightmare/Timer.xib
@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="37"/>
+			<integer value="2"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -31,110 +31,101 @@
 			<object class="IBProxyObject" id="371349661">
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 			</object>
-			<object class="IBUIView" id="87553856">
+			<object class="IBUIView" id="349670980">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIView" id="915758166">
-						<reference key="NSNextResponder" ref="87553856"/>
+					<object class="IBUIImageView" id="998101444">
+						<reference key="NSNextResponder" ref="349670980"/>
+						<int key="NSvFlags">256</int>
+						<string key="NSFrame">{{85, -1}, {63, 124}}</string>
+						<reference key="NSSuperview" ref="349670980"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">4</int>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">TimeOver.png</string>
+						</object>
+					</object>
+					<object class="IBUIImageView" id="705108888">
+						<reference key="NSNextResponder" ref="349670980"/>
+						<int key="NSvFlags">256</int>
+						<string key="NSFrameSize">{63, 124}</string>
+						<reference key="NSSuperview" ref="349670980"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">4</int>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">Timer.png</string>
+						</object>
+					</object>
+					<object class="IBUIView" id="940898433">
+						<reference key="NSNextResponder" ref="349670980"/>
 						<int key="NSvFlags">292</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIImageView" id="923278430">
-								<reference key="NSNextResponder" ref="915758166"/>
+							<object class="IBUIImageView" id="197262033">
+								<reference key="NSNextResponder" ref="940898433"/>
 								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{0, -20}, {480, 360}}</string>
-								<reference key="NSSuperview" ref="915758166"/>
+								<string key="NSFrameSize">{33, 34}</string>
+								<reference key="NSSuperview" ref="940898433"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">4</int>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">Aev_257.jpg</string>
+									<string key="NSResourceName">Sand.png</string>
 								</object>
-							</object>
-							<object class="IBUIImageView" id="115209964">
-								<reference key="NSNextResponder" ref="915758166"/>
-								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{0, -20}, {480, 360}}</string>
-								<reference key="NSSuperview" ref="915758166"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">4</int>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">end_img_4.png</string>
-								</object>
-							</object>
-							<object class="IBUIImageView" id="766783493">
-								<reference key="NSNextResponder" ref="915758166"/>
-								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{40, 116}, {400, 64}}</string>
-								<reference key="NSSuperview" ref="915758166"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">4</int>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">end_img_2.png</string>
-								</object>
-							</object>
-							<object class="IBUIImageView" id="766141908">
-								<reference key="NSNextResponder" ref="915758166"/>
-								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{0, 217}, {480, 103}}</string>
-								<reference key="NSSuperview" ref="915758166"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">4</int>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">end_img_3.png</string>
-								</object>
-							</object>
-							<object class="IBUIImageView" id="354304322">
-								<reference key="NSNextResponder" ref="915758166"/>
-								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{0, 206}, {480, 2}}</string>
-								<reference key="NSSuperview" ref="915758166"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">4</int>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<object class="NSCustomResource" key="IBUIImage" id="661409388">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">end_img_1.png</string>
-								</object>
-							</object>
-							<object class="IBUIImageView" id="1055822157">
-								<reference key="NSNextResponder" ref="915758166"/>
-								<int key="NSvFlags">256</int>
-								<string key="NSFrame">{{0, 83}, {480, 2}}</string>
-								<reference key="NSSuperview" ref="915758166"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">4</int>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<reference key="IBUIImage" ref="661409388"/>
 							</object>
 						</object>
-						<string key="NSFrameSize">{480, 320}</string>
-						<reference key="NSSuperview" ref="87553856"/>
-						<object class="NSColor" key="IBUIBackgroundColor" id="401887929">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAAA</bytes>
+						<string key="NSFrame">{{15, 26}, {51, 35}}</string>
+						<reference key="NSSuperview" ref="349670980"/>
+						<object class="NSColor" key="IBUIBackgroundColor" id="286337320">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MSAwAA</bytes>
 						</object>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+					</object>
+					<object class="IBUIView" id="116134855">
+						<reference key="NSNextResponder" ref="349670980"/>
+						<int key="NSvFlags">292</int>
+						<object class="NSMutableArray" key="NSSubviews">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUIImageView" id="281966587">
+								<reference key="NSNextResponder" ref="116134855"/>
+								<int key="NSvFlags">256</int>
+								<string key="NSFrameSize">{33, 34}</string>
+								<reference key="NSSuperview" ref="116134855"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">4</int>
+								<bool key="IBUIMultipleTouchEnabled">YES</bool>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">Sand2.png</string>
+								</object>
+							</object>
+						</object>
+						<string key="NSFrame">{{15, 67}, {50, 35}}</string>
+						<reference key="NSSuperview" ref="349670980"/>
+						<reference key="IBUIBackgroundColor" ref="286337320"/>
+						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 					</object>
 				</object>
-				<string key="NSFrameSize">{480, 320}</string>
+				<string key="NSFrameSize">{171, 209}</string>
 				<reference key="NSSuperview"/>
-				<reference key="IBUIBackgroundColor" ref="401887929"/>
+				<object class="NSColor" key="IBUIBackgroundColor">
+					<int key="NSColorSpace">3</int>
+					<bytes key="NSWhite">MSAwAA</bytes>
+				</object>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 			</object>
 		</object>
@@ -145,55 +136,39 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">view</string>
 						<reference key="source" ref="841351856"/>
-						<reference key="destination" ref="87553856"/>
+						<reference key="destination" ref="349670980"/>
 					</object>
-					<int key="connectionID">4</int>
+					<int key="connectionID">16</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">bad_end_View</string>
-						<reference key="source" ref="87553856"/>
-						<reference key="destination" ref="915758166"/>
-					</object>
-					<int key="connectionID">38</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">bad_end_img4</string>
-						<reference key="source" ref="87553856"/>
-						<reference key="destination" ref="766783493"/>
-					</object>
-					<int key="connectionID">40</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">bad_end_img3</string>
-						<reference key="source" ref="87553856"/>
-						<reference key="destination" ref="1055822157"/>
-					</object>
-					<int key="connectionID">41</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">bad_end_img2</string>
-						<reference key="source" ref="87553856"/>
-						<reference key="destination" ref="354304322"/>
+						<string key="label">sandDown</string>
+						<reference key="source" ref="349670980"/>
+						<reference key="destination" ref="281966587"/>
 					</object>
 					<int key="connectionID">42</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">bad_end_img1</string>
-						<reference key="source" ref="87553856"/>
-						<reference key="destination" ref="115209964"/>
+						<string key="label">sandDownMask</string>
+						<reference key="source" ref="349670980"/>
+						<reference key="destination" ref="116134855"/>
 					</object>
 					<int key="connectionID">43</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">bad_base</string>
-						<reference key="source" ref="87553856"/>
-						<reference key="destination" ref="923278430"/>
+						<string key="label">sandUp</string>
+						<reference key="source" ref="349670980"/>
+						<reference key="destination" ref="197262033"/>
+					</object>
+					<int key="connectionID">44</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">sandUpMask</string>
+						<reference key="source" ref="349670980"/>
+						<reference key="destination" ref="940898433"/>
 					</object>
 					<int key="connectionID">45</int>
 				</object>
@@ -203,7 +178,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBObjectRecord">
 						<int key="objectID">0</int>
-						<object class="NSArray" key="object" id="363567265">
+						<object class="NSArray" key="object" id="511116064">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 						</object>
 						<reference key="children" ref="1000"/>
@@ -212,66 +187,63 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">-1</int>
 						<reference key="object" ref="841351856"/>
-						<reference key="parent" ref="363567265"/>
+						<reference key="parent" ref="511116064"/>
 						<string type="base64-UTF8" key="objectName">RmlsZSdzIE93bmVyA</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">-2</int>
 						<reference key="object" ref="371349661"/>
-						<reference key="parent" ref="363567265"/>
+						<reference key="parent" ref="511116064"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">2</int>
-						<reference key="object" ref="87553856"/>
+						<reference key="object" ref="349670980"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="915758166"/>
+							<reference ref="940898433"/>
+							<reference ref="116134855"/>
+							<reference ref="998101444"/>
+							<reference ref="705108888"/>
 						</object>
-						<reference key="parent" ref="363567265"/>
+						<reference key="parent" ref="511116064"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">37</int>
-						<reference key="object" ref="915758166"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="766783493"/>
-							<reference ref="354304322"/>
-							<reference ref="1055822157"/>
-							<reference ref="766141908"/>
-							<reference ref="115209964"/>
-							<reference ref="923278430"/>
-						</object>
-						<reference key="parent" ref="87553856"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">33</int>
-						<reference key="object" ref="115209964"/>
-						<reference key="parent" ref="915758166"/>
+						<int key="objectID">30</int>
+						<reference key="object" ref="998101444"/>
+						<reference key="parent" ref="349670980"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">34</int>
-						<reference key="object" ref="766783493"/>
-						<reference key="parent" ref="915758166"/>
+						<reference key="object" ref="940898433"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="197262033"/>
+						</object>
+						<reference key="parent" ref="349670980"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">32</int>
-						<reference key="object" ref="766141908"/>
-						<reference key="parent" ref="915758166"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">36</int>
-						<reference key="object" ref="354304322"/>
-						<reference key="parent" ref="915758166"/>
+						<reference key="object" ref="197262033"/>
+						<reference key="parent" ref="940898433"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">35</int>
-						<reference key="object" ref="1055822157"/>
-						<reference key="parent" ref="915758166"/>
+						<reference key="object" ref="116134855"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="281966587"/>
+						</object>
+						<reference key="parent" ref="349670980"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">44</int>
-						<reference key="object" ref="923278430"/>
-						<reference key="parent" ref="915758166"/>
+						<int key="objectID">37</int>
+						<reference key="object" ref="281966587"/>
+						<reference key="parent" ref="116134855"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">31</int>
+						<reference key="object" ref="705108888"/>
+						<reference key="parent" ref="349670980"/>
 					</object>
 				</object>
 			</object>
@@ -284,14 +256,16 @@
 					<string>2.CustomClassName</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
-					<string>37.IBPluginDependency</string>
+					<string>34.IBPluginDependency</string>
+					<string>35.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>UIViewController</string>
 					<string>UIResponder</string>
-					<string>EndView</string>
-					<string>{{402, 229}, {480, 320}}</string>
+					<string>Timer</string>
+					<string>{{422, 445}, {171, 209}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
@@ -322,26 +296,16 @@
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">BaseView</string>
+					<string key="className">Timer</string>
 					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">BaseClasses/BaseView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">EndView</string>
-					<string key="superclassName">BaseView</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>bad_base</string>
-							<string>bad_end_View</string>
-							<string>bad_end_img1</string>
-							<string>bad_end_img2</string>
-							<string>bad_end_img3</string>
-							<string>bad_end_img4</string>
+							<string>sandDown</string>
+							<string>sandDownMask</string>
+							<string>sandUp</string>
+							<string>sandUpMask</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -349,13 +313,11 @@
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
-							<string>id</string>
-							<string>id</string>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">ViewClasses/EndView.h</string>
+						<string key="minorKey">Classes/Timer.h</string>
 					</object>
 				</object>
 			</object>
