--- a/trunk/PrincessNightmare/SerihuBoard.xib
+++ b/trunk/PrincessNightmare/SerihuBoard.xib
@@ -39,7 +39,7 @@
 					<object class="IBUIImageView" id="915360528">
 						<reference key="NSNextResponder" ref="773793330"/>
 						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{28, 1}, {137, 25}}</string>
+						<string key="NSFrame">{{29, 1}, {157, 25}}</string>
 						<reference key="NSSuperview" ref="773793330"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -137,13 +137,17 @@
 					<object class="IBUILabel" id="754587102">
 						<reference key="NSNextResponder" ref="773793330"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{36, 2}, {120, 27}}</string>
+						<string key="NSFrame">{{37, 2.5}, {140, 27}}</string>
 						<reference key="NSSuperview" ref="773793330"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="IBUIText">Label</string>
-						<reference key="IBUIFont" ref="991078093"/>
+						<object class="NSFont" key="IBUIFont" id="18927377">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">1.400000e+01</double>
+							<int key="NSfFlags">16</int>
+						</object>
 						<reference key="IBUITextColor" ref="1059171215"/>
 						<nil key="IBUIHighlightedColor"/>
 						<reference key="IBUIShadowColor" ref="1059171215"/>
@@ -155,13 +159,13 @@
 					<object class="IBUILabel" id="313264831">
 						<reference key="NSNextResponder" ref="773793330"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{36, 0}, {120, 27}}</string>
+						<string key="NSFrame">{{37, 0.5}, {140, 27}}</string>
 						<reference key="NSSuperview" ref="773793330"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="IBUIText">Label</string>
-						<reference key="IBUIFont" ref="991078093"/>
+						<reference key="IBUIFont" ref="18927377"/>
 						<reference key="IBUITextColor" ref="1059171215"/>
 						<nil key="IBUIHighlightedColor"/>
 						<reference key="IBUIShadowColor" ref="1059171215"/>
@@ -173,13 +177,13 @@
 					<object class="IBUILabel" id="26894065">
 						<reference key="NSNextResponder" ref="773793330"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{37, 1}, {120, 27}}</string>
+						<string key="NSFrame">{{38, 2}, {140, 27}}</string>
 						<reference key="NSSuperview" ref="773793330"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="IBUIText">Label</string>
-						<reference key="IBUIFont" ref="991078093"/>
+						<reference key="IBUIFont" ref="18927377"/>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -301,14 +305,14 @@
 						<reference key="object" ref="773793330"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="915360528"/>
 							<reference ref="505761310"/>
 							<reference ref="828136463"/>
 							<reference ref="1041895476"/>
 							<reference ref="628237814"/>
-							<reference ref="754587102"/>
+							<reference ref="915360528"/>
 							<reference ref="313264831"/>
 							<reference ref="26894065"/>
+							<reference ref="754587102"/>
 						</object>
 						<reference key="parent" ref="58880970"/>
 					</object>
