--- a/trunk/AlarmGitai/AlarmGitaiViewController.xib
+++ b/trunk/AlarmGitai/AlarmGitaiViewController.xib
@@ -93,6 +93,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>-1.CustomClassName</string>
 					<string>-2.CustomClassName</string>
+					<string>6.CustomClassName</string>
 					<string>6.IBEditorWindowLastContentRect</string>
 					<string>6.IBPluginDependency</string>
 				</object>
@@ -100,6 +101,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>AlarmGitaiViewController</string>
 					<string>UIResponder</string>
+					<string>BaseView</string>
 					<string>{{438, 276}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
@@ -135,6 +137,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/AlarmGitaiViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">BaseView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">BaseClasses/BaseView.h</string>
 					</object>
 				</object>
 			</object>
